Change dependencies among containers

--- a/ansible/roles/sonicv2/templates/etc/systemd/system/bgp.j2
+++ b/ansible/roles/sonicv2/templates/etc/systemd/system/bgp.j2
@@ -1,7 +1,8 @@
 [Unit]
 Description=BGP container
 Requires=database.service
-After=database.service
+Wants=syncd.service
+After=database.service syncd.service
 
 [Service]
 User={{ sonicadmin_user }}
