--- a/ansible/roles/sonicv2/templates/etc/systemd/system/orchagent.j2
+++ b/ansible/roles/sonicv2/templates/etc/systemd/system/orchagent.j2
@@ -1,13 +1,13 @@
 [Unit]
 Description=orchagent container
 Requires=database.service
-After=database.service
+Requires=syncd.service
+After=database.service syncd.service
 
 [Service]
 User={{ sonicadmin_user }}
 ExecStart=/usr/bin/docker start -a orchagent
 ExecStop=/usr/bin/docker stop orchagent
-ExecStopPost=/usr/bin/docker stop syncd
 ExecStopPost=/usr/bin/docker exec database redis-cli FLUSHALL
 
 [Install]
